# clip-gaze

./: .gitignore  LICENSE  MANIFEST.in  PYPI_README.md  README.md  example.ipynb  pyproject.toml
clip_gaze/: __init__.py  artists_by_name.py  artists_by_prevalence.py  gaze.py  lists.py  media.py  movements.py  qualities.py  sites.py
